# Esoptron

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  SPECS.SHA3-256  pyproject.toml  pyrightconfig.json  wsgi.py  wsgi_pwa.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: GENESIS_COMMITMENT.md  audit_report_2026-05-28.md  audit_report_2026-05-30.md  jeremy_zgonec.dilithium5.pubkey.hex  migration_protocol.md  testing_guide.md  whitepaper_esoptron.md  whitepaper_metatron.md  whitepaper_metatron_mnemonic.md  whitepaper_metatron_separation.md  whitepaper_vault_protocols.md
docs/research_notes/: yuga_lexicon_analysis.md
docs/specs/: EPX-2_card_v2.md  EPX-C_codex.md  EPX-E_golden_eggs.md  EPX-G_reclaim.md  EPX-H_seal_reveal.md  EPX-K_keys_of_office.md  EPX-M_market.md  EPX-T_titled_transfer.md  EPX-V_voucher_claim.md
pwa/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: argon2_bench.py  decode_from_photo.py  demo_ecosystem.py  demo_four_protocols.py  demo_hologram.py  demo_metatron.py  diagnose_detection.py  enroll_from_card.py  eopx_artifact.py  eopx_badge.py  eopx_keygen.py  eopx_pack.py  eopx_reconstruct.py  eopx_shard.py  eopx_verify.py  gen_pwa_icons.py  gen_test_vectors.py  live_scan.py  loopback_canonical.py  make_invitation.py  make_test_vault.py  open_vault_from_photo.py  pick_and_decode.py  print_sheet.py  render_codex.py  serve_pwa_api.py  serve_scan.py  show_relic_sigils.py  vault_migrate.py
sdk/python/: pyproject.toml
sdk/python/esoptron/: __init__.py  _cli.py  eopx_verify.py
tests/: conftest.py  test_anchor_api.py  test_aruco_autodetect.py  test_bip39_recovery.py  test_capabilities.py  test_capability_api.py  test_ceremony_attestation.py  test_check_encoding.py  test_collection.py  test_committed_block.py  test_egg_emblem.py  test_egg_figure.py  test_eidolon_economy.py  test_eidolon_integration.py  test_eopx_format.py  test_eopx_tampering.py  test_flows.py  test_genesis_card.py  test_genesis_token.py  test_golden_eggs.py  test_ledger_backend.py  test_license_boundary.py  test_live_scan_loopback.py  test_metatron_detect.py  test_metatron_distinguishability.py  test_metatron_field.py  test_metatron_graph.py  test_metatron_mnemonic.py  test_metatron_reed_solomon.py  test_metatron_render.py  test_postgres_ledger.py  test_property_fuzz.py  test_pwa_api.py  test_rate_limit.py  test_reclaim.py  test_recovery.py  test_relic_figure.py  test_relic_sigil.py  test_sdk_verifier.py  test_seal_badge_loopback.py  (+12 more)
tools/: check_encoding.py  license_boundary.py  sign_spec.py  verify_spec.py
(+100 files in other folders)
