[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esoptron"
version = "0.1.0b1"
description = "Esoptron — post-quantum visual vault identity (Metatron / Genesis)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Esoptron contributors" }]
keywords = [
    "esoptron",
    "eopx",
    "post-quantum",
    "ml-dsa",
    "ml-kem",
    "dilithium",
    "kyber",
    "vault",
    "metatron",
    "visual-cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.26",
    "pqcrypto>=0.3",
    "cryptography>=41.0",
    "argon2-cffi>=23.0",
    "mnemonic>=0.21",
]

[project.optional-dependencies]
server = [
    "Flask>=3.0",
    "qrcode>=7.4",
]
scanner = [
    "opencv-contrib-python>=4.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "build>=1.0",
    "twine>=5.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/oykdo/esoptron"
Repository = "https://github.com/oykdo/esoptron"
Issues = "https://github.com/oykdo/esoptron/issues"
Changelog = "https://github.com/oykdo/esoptron/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["eopx*"]

[tool.setuptools.package-data]
eopx = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
